@@ -1,5 +1,17 @@
 -------------------------------------------------------------------------------
-$Id: README.1,v 1.33 1993/12/20 06:30:20 gray Exp $
+$Id: README.1,v 1.34 1994/02/17 22:48:26 gray Exp $
+-------------------------------------------------------------------------------
+
+MALLOC_DEBUG:
+
+The malloc_dbg library has been designed as a drop in replacement for
+the system's malloc, realloc, calloc, free and other memory management
+routines while providing powerful heap-memory debugging facilities.
+
+It is also reasonably portable having been successfully run on the
+following operating systems: BSDI, SunOS, Solaris, AIX, Ultrix, OSF,
+Irix, HPUX, and probably a couple others.
+
 -------------------------------------------------------------------------------
 
 INSTALLATION:
