@@ -1,5 +1,17 @@
 -------------------------------------------------------------------------------
-$Id: README_ftp.1,v 1.7 1993/11/23 07:41:06 gray Exp $
+$Id: README_ftp.1,v 1.8 1994/02/17 22:48:28 gray Exp $
+-------------------------------------------------------------------------------
+
+MALLOC_DEBUG:
+
+The malloc_dbg library has been designed as a drop in replacement for
+the system's malloc, realloc, calloc, free and other memory management
+routines while providing powerful heap-memory debugging facilities.
+
+It is also reasonably portable having been successfully run on the
+following operating systems: BSDI, SunOS, Solaris, AIX, Ultrix, OSF,
+Irix, HPUX, and probably a couple others.
+
 -------------------------------------------------------------------------------
 
 REPOSITORY:
