@@ -1,9 +1,10 @@
 -------------------------------------------------------------------------------
-$Id: NEWS,v 1.14 1994/01/20 01:46:31 gray Exp $
+$Id: NEWS,v 1.15 1994/02/17 22:48:24 gray Exp $
 -------------------------------------------------------------------------------
 
 Version 2.0.0:
 
+	* Added initial support for external block locating.
 	* Added 'allow-nonlinear' token to remove special checks.
 	* Renamed dbg_tokens.h -> debug_tok.h and dbg_values.h -> debug_val.h
 	* Added -V option to malloc_dbg and desc field for debug-token list.
